gcp/redis_memorystore/redis-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: redis
  namespace: vote-app
subsets:
  - addresses:
      - ip: 172.17.0.1
    ports:
      - port: 6379
