gcp/redis_memorystore/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: vote-app
spec:
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
