gcp/redis_memorystore/allow-egress-to-external-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vote-egress-redis
  namespace: vote-app
spec:
  podSelector:
    matchLabels:
      app: vote
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 172.17.0.1/32   # external Redis endpoint (tunnel)
    ports:
    - protocol: TCP
      port: 6379
